Added PHPUnit tests

--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         {
             "name": "Vladimir Kartaviy",
             "email": "vkartaviy@gmail.com",
-            "homepage": "http://vkartaviy.name/"
+            "homepage": "http://vkartaviy.name"
         }
     ],
     "require": {
