--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "vkartaviy/batch",
     "description": "The library for repeatable and retryable operations",
-    "type": "library",
+    "keywords": ["proxy", "retry", "repeat", "backoff"],
     "homepage": "https://github.com/vkartaviy/batch",
     "license": "MIT",
     "authors": [
@@ -12,7 +12,7 @@
         }
     ],
     "require": {
-        "php": ">=5.3.0"
+        "php": ">=5.3.3"
     },
     "autoload": {
         "psr-0": { "Batch": "src/" }
