--- a/composer.json
+++ b/composer.json
@@ -1,25 +1,43 @@
 {
-    "name": "vkartaviy/retry",
-    "description": "The library for repeatable and retryable operations",
+    "name": "keboola/retry",
+    "description": "Library for repeatable and retryable operations",
     "keywords": ["proxy", "retry", "repeat", "backoff"],
-    "homepage": "https://github.com/vkartaviy/retry",
     "license": "MIT",
     "authors": [
         {
-            "name": "Vladimir Kartaviy",
-            "email": "vkartaviy@gmail.com",
-            "homepage": "http://vkartaviy.name"
+            "name": "Keboola Dev",
+            "email": "devel@keboola.com"
         }
     ],
     "require": {
-        "php": ">=5.4"
+        "php": ">=7.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "3.7.*"
+        "phpunit/phpunit": "7.*",
+        "keboola/coding-standard": "^7.0",
+        "phpstan/phpstan": "^0.8"
     },
     "autoload": {
         "psr-0": {
             "Retry": "src"
         }
+    },
+    "scripts": {
+        "tests": "phpunit",
+        "phpstan": "phpstan analyse --no-progress --level=max ./src ./tests",
+        "phpcs": "phpcs -n --ignore=vendor --extensions=php .",
+        "phpcbf": "phpcbf -n --ignore=vendor --extensions=php .",
+        "build": [
+            "@phpcs",
+            "@phpstan",
+            "@tests"
+        ],
+        "ci": [
+            "@composer validate --no-check-all --strict",
+            "@build"
+        ]
+    },
+    "config": {
+        "sort-packages": true
     }
 }
