--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         }
     ],
     "require": {
-        "php": ">=7.1"
+        "php": ">=7.1",
+        "monolog/monolog": "^1.17"
     },
     "require-dev": {
         "phpunit/phpunit": "7.*",
