--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     "require-dev": {
         "phpunit/phpunit": "7.*",
         "keboola/coding-standard": "^7.0",
-        "phpstan/phpstan": "^0.8"
+        "phpstan/phpstan-shim": "^0.10"
     },
     "autoload": {
         "psr-4": {
