--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,7 @@
         }
     ],
     "require": {
-        "php": ">=7.1",
-        "monolog/monolog": "^1.17"
+        "php": ">=7.1"
     },
     "require-dev": {
         "phpunit/phpunit": "7.*",
