--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,9 @@
         "keboola/coding-standard": "^7.0",
         "phpstan/phpstan-shim": "^0.10"
     },
+    "conflict": {
+        "vkartaviy/retry": "*"
+    },
     "autoload": {
         "psr-4": {
             "Retry\\": "src/"
