--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "keboola/coding-standard": "^7.0",
         "phpstan/phpstan-shim": "^0.10"
     },
-    "conflict": {
+    "replace": {
         "vkartaviy/retry": "*"
     },
     "autoload": {
